# sstar

./: .gitignore  .readthedocs.yml  .travis.yml  404.html  Apptainer.def  README.md  build-env.yaml  build-env.yml  conda-env.yaml  conda-env.yml  dev-env.yaml  dev-env.yml  environment.yml  index.html  mkdocs.yaml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml  versions.json
.github/workflows/: build.yaml  build.yml  dry-run.yml  python-package-conda.yml
1.2/: 404.html  index.html  sitemap.xml
1.2/search/: search_index.json
2.0/: 404.html  index.html  sitemap.xml
2.0/search/: search_index.json
apptainer/: sstar-1.1.3-env.yaml  sstar-1.1.3.def
docs/: examples.md  index.md  references.md
docs/API/: cal_likelihood.md  cal_match_rate.md  cal_pvalue.md  cal_ref_match_pct.md  cal_s_star.md  cal_threshold.md  get_quantile.md  get_tract.md  utils.md
docs/userguide/: assign.md  configuration.md  example.md  infer.md  likelihood.md  match.md  matchrate.md  overview.md  pvalue.md  quantile.md  rmatch.md  score.md  threshold.md  tract.md  train.md
examples/: index.html
examples/data/: BonoboGhost_4K19_wo_introgression.yaml  HumanNeanderthal_4G21_wo_introgression.yaml  nean.samples.list  sstar2.config.yaml  sstar2.example.biallelic.snps.vcf.gz.tbi  sstar2.example.config.yaml
examples/features/: archie.features.yaml  lr.features.yaml  sstar.features.yaml
examples/models/: ArchIE_3D19.yaml  BonoboGhost_4K19.yaml  BonoboGhost_4K19_no_introgression.yaml
examples/results/: sstar.example.den.match.rate.txt  sstar.example.match.den.filtered.pval.txt  sstar.example.src1.bed  (+14 more)
latest/: 404.html  index.html
references/: index.html
search/: search_index.json
sstar/: __main__.py  archie_infer.py  archie_infer_all.py  archie_infer_haplotypes.py  archie_only_train.py  archie_train.py  assign.py  cal_likelihood.py  cal_match_pct.py  cal_match_rate.py  cal_pvalue.py  cal_ref_match_pct.py  cal_s_star.py  cal_sstar_stats.py  cal_threshold.py  calc_match_rate.py  calc_s_star.py  calc_threshold.py  evaluate.py  feature_vector_preprocessor.py  get_quantile.py  get_tract.py  infer.py  label.py  match.py  models.py  mp_manager.py  msprime_simulator.py  preprocess.py  quantile_regression.py  simulate.py  sstar.py  stats.py  train.py  utils.py
tests/: test_argument_validation.py  test_assign.py  test_cal_likelihood.py  test_cal_match_pct.py  test_cal_match_rate.py  test_cal_pvalue.py  test_cal_ref_match.py  test_cal_s_star.py  test_cal_sstar_stats.py  test_cal_threshold.py  test_calc_match_rate.py  test_calc_s_star.py  test_calc_threshold.py  test_feature_config.py  test_feature_vector_preprocessor.py  test_get_quantile.py  test_get_tract.py  test_infer.py  test_main_.py  test_match.py  test_mp_manager.py  test_msprime_simulator.py  test_preprocess.py  test_preprocess_config.py  test_preprocessing_config.py  test_simulate.py  test_simulation_config.py  test_sstar.py  test_stats.py  test_train.py  test_utils.py
(+186 files in other folders)
