[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sstar"
version = "1.2.0"
description = "A Python package for detecting archaic introgression from population genetic data with S*"
readme = "README.md"
requires-python = "==3.8.19"
license = {text = "Apache-2.0"}
authors = [
  {name = "Xin Huang", email = "xinhuang.res@gmail.com"}
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
]
dependencies = [
  "demes==0.2.3",
  "numpy==1.24.4",
  "pandas==2.0.3",
  "rpy2==3.5.11",
  "scikit-allel==1.3.7",
  "scipy==1.10.1",
]

[project.urls]
Homepage = "https://github.com/xin-huang/sstar"

[project.scripts]
sstar = "sstar.__main__:main"

[tool.setuptools]
packages = ["sstar"]
include-package-data = true
