[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sstar"
version = "2.0.0"
description = "A Python Package for S*-based Archaic Introgression Detection with Machine Learning"
readme = "README.md"
requires-python = "==3.12.13"
license = {text = "GPLv3"}
authors = [
  {name = "Xin Huang", email = "xinhuang.res@gmail.com"}
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "demes==0.2.3",
  "msprime==1.4.1",
  "numpy==2.4.5",
  "pandas==3.0.3",
  "scikit-allel==1.3.13",
  "scikit-learn==1.8.0",
  "scipy==1.17.1",
]

[project.urls]
Homepage = "https://github.com/xin-huang/sstar"

[project.scripts]
sstar2 = "sstar.__main__:main"

[tool.setuptools]
packages = ["sstar"]
include-package-data = true
